--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd client/blog && npm install && npm run build",
-    "start": "cd server && node server.js",
+    "start": "cd server && node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
