--- a/server/package.json
+++ b/server/package.json
@@ -11,13 +11,13 @@
   "author": "",
   "license": "ISC",
   "type": "module",
- 
   "dependencies": {
     "bcrypt": "^5.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.2.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "path": "^0.12.7"
   }
 }
